<resources>
    <string name="app_name">Nac01</string>
    <string name="titulo_um">Informe o material que deseja:</string>
    <string name="piso_branco_baixo_brilho">Piso Branco Baixo Brilho</string>
    <string name="piso_albania_45x45">Piso Albania 45x45</string>
    <string name="porcelanato_perlato_branco">Porcelanato Perlato Branco</string>
    <string name="revestimento_mosaico">Revestimento Mosaico</string>
    <string name="informe_a_medida_em_m2">Informe a medida em m2</string>
    <string name="ultra_frete_mega_r_pido">Ultra frete mega rápido</string>
    <string name="calcular">Calcular</string>
    <string name="dez">10</string>
</resources>
