<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_um"
        android:padding="16dp"
        android:textSize="18sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdOpcoes">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao1"
            android:text="@string/piso_branco_baixo_brilho"
            android:checked="true"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao2"
            android:text="@string/piso_albania_45x45"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao3"
            android:text="@string/porcelanato_perlato_branco"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao4"
            android:text="@string/revestimento_mosaico"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_a_medida_em_m2"
        android:padding="16dp"
        android:textSize="18sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/digiteMetro"
        android:inputType="numberDecimal"
        android:text="@string/dez"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ultra_frete_mega_r_pido"
        android:id="@+id/ultraFrete"
        android:checked="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calcular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:textAlignment="center"
        android:textSize="24sp"/>




</LinearLayout>